# velluto-autopilot

./: .env.example  .gitignore  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py  redis_client.py
app/api/routes/: approvals.py  chat.py  dashboard.py  health.py  meta.py  orchestrator.py  reports.py  shopify.py  whatsapp.py
app/engines/: approval.py  monitoring.py  rollback.py
app/models/: __init__.py  approval.py  audit.py  kpi.py  rollback.py  task.py
app/modules/clarity/: agent.py  client.py
app/modules/competitor/: monitor.py  tools.py
app/modules/creative/: tools.py
app/modules/email_marketing/: client.py  flows.py  tools.py
app/modules/gsc/: client.py
app/modules/kpi/: engine.py  tools.py
app/modules/meta_ads/: client.py  optimizer.py  tools.py
app/modules/quality/: manager.py
app/modules/seo/: tools.py
app/modules/shopify/: client.py  tools.py
app/modules/token_optimizer/: optimizer.py
app/modules/translations/: translator.py
app/modules/whatsapp/: approval.py  client.py
app/orchestrator/: agent.py  meta_orchestrator.py  optimizer.py  scheduler.py
app/workers/: daily_report.py  queue.py
dashboard/: index.html
docs/: index.html
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: setup_languages.py  translate_products.py  translate_templates.py
tests/: conftest.py  test_api.py  test_orchestrator.py
tests/engines/: test_approval.py  test_monitoring.py  test_rollback.py
tests/modules/: test_kpi.py  test_meta_ads.py  test_shopify.py
